// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`composition hook should return with Select props 1`] = `
Object {
  "aria-invalid": false,
  "aria-required": undefined,
  "children": <React.Fragment>
    <option
      value="sunny"
    >
      Sunny
    </option>
    <option
      value="windy"
    >
      Windy
    </option>
    <option
      value="overcast"
    >
      Overcast
    </option>
  </React.Fragment>,
  "className": "css-14487xg css-1pwrqjj css-o12mw7 fp-Box fp-Select",
  "disabled": undefined,
  "onChange": [Function],
  "wrapElement": [Function],
}
`;

exports[`defaultProps should render correctly for className 1`] = `
.emotion-9 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

.emotion-6.emotion-6 {
  position: absolute;
  width: 0.8em;
  height: 2.75em;
  right: 0.8em;
  z-index: 1;
  color: #212121;
  fill: #212121;
  pointer-events: none;
}

.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-3 {
  fill: inherit;
  position: relative;
  height: 1em;
  width: 1em;
}

.emotion-0 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: linear-gradient(rgb(255,255,255),rgb(249,250,251));
  border: 1px solid #d9d9e1;
  border-radius: 6px;
  color: #7a7a7a;
  height: 2.75em;
  padding: 0.4em 2em 0.4em 0.8em;
  line-height: 1.5;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
}

.emotion-0[disabled],
.emotion-0[aria-disabled="true"] {
  background: #f2f2f5;
  box-shadow: unset;
}

.emotion-0[disabled] + .fp-Icon {
  color: #7b899d;
  fill: #7b899d;
}

.emotion-0:focus {
  outline: unset;
  z-index: 2;
  border-color: #574feb;
  box-shadow: #eeedfd 0px 0px 0px 3px !important;
}

.emotion-8 {
  color: #574feb !important;
}

<div
  class="emotion-1 emotion-8 emotion-9 test fp-SelectWrapper fp-Box"
>
  <select
    aria-invalid="false"
    class="emotion-0 emotion-1 emotion-2 fp-Box fp-Select"
  >
    <option
      value=""
    >
      Please select...
    </option>
    <option
      value="sunny"
    >
      Sunny
    </option>
    <option
      value="windy"
    >
      Windy
    </option>
    <option
      value="overcast"
    >
      Overcast
    </option>
  </select>
  <svg
    class="emotion-3 emotion-1 emotion-2 emotion-6 fp-SelectIcon fp-Box fp-Icon"
    role="img"
    viewBox="0 0 448 512"
  >
    <path
      d="M207.029 381.476L12.686 187.132c-9.373-9.373-9.373-24.569 0-33.941l22.667-22.667c9.357-9.357 24.522-9.375 33.901-.04L224 284.505l154.745-154.021c9.379-9.335 24.544-9.317 33.901.04l22.667 22.667c9.373 9.373 9.373 24.569 0 33.941L240.971 381.476c-9.373 9.372-24.569 9.372-33.942 0z"
      fill="currentColor"
      fill-rule="evenodd"
    />
  </svg>
</div>
`;

exports[`overrides Select.root should render correctly 1`] = `
.emotion-9 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

.emotion-6.emotion-6 {
  position: absolute;
  width: 0.8em;
  height: 2.75em;
  right: 0.8em;
  z-index: 1;
  color: #212121;
  fill: #212121;
  pointer-events: none;
}

.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-3 {
  fill: inherit;
  position: relative;
  height: 1em;
  width: 1em;
}

.emotion-0 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: linear-gradient(rgb(255,255,255),rgb(249,250,251));
  border: 1px solid #d9d9e1;
  border-radius: 6px;
  color: #7a7a7a;
  height: 2.75em;
  padding: 0.4em 2em 0.4em 0.8em;
  line-height: 1.5;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
}

.emotion-0[disabled],
.emotion-0[aria-disabled="true"] {
  background: #f2f2f5;
  box-shadow: unset;
}

.emotion-0[disabled] + .fp-Icon {
  color: #7b899d;
  fill: #7b899d;
}

.emotion-0:focus {
  outline: unset;
  z-index: 2;
  border-color: #574feb;
  box-shadow: #eeedfd 0px 0px 0px 3px !important;
}

.emotion-0 {
  background-color: red;
}

<div
  class="emotion-1 emotion-2 emotion-9 fp-SelectWrapper fp-Box"
>
  <select
    aria-invalid="false"
    class="emotion-0 emotion-1 emotion-2 fp-Box fp-Select"
  >
    <option
      value=""
    >
      Please select...
    </option>
    <option
      value="sunny"
    >
      Sunny
    </option>
    <option
      value="windy"
    >
      Windy
    </option>
    <option
      value="overcast"
    >
      Overcast
    </option>
  </select>
  <svg
    class="emotion-3 emotion-1 emotion-2 emotion-6 fp-SelectIcon fp-Box fp-Icon"
    role="img"
    viewBox="0 0 448 512"
  >
    <path
      d="M207.029 381.476L12.686 187.132c-9.373-9.373-9.373-24.569 0-33.941l22.667-22.667c9.357-9.357 24.522-9.375 33.901-.04L224 284.505l154.745-154.021c9.379-9.335 24.544-9.317 33.901.04l22.667 22.667c9.373 9.373 9.373 24.569 0 33.941L240.971 381.476c-9.373 9.372-24.569 9.372-33.942 0z"
      fill="currentColor"
      fill-rule="evenodd"
    />
  </svg>
</div>
`;

exports[`props should render correctly 1`] = `
.emotion-9 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

.emotion-6.emotion-6 {
  position: absolute;
  width: 0.8em;
  height: 2.75em;
  right: 0.8em;
  z-index: 1;
  color: #212121;
  fill: #212121;
  pointer-events: none;
}

.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-0 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: linear-gradient(rgb(255,255,255),rgb(249,250,251));
  border: 1px solid #d9d9e1;
  border-radius: 6px;
  color: #212121;
  height: 2.75em;
  padding: 0.4em 2em 0.4em 0.8em;
  line-height: 1.5;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
}

.emotion-0[disabled],
.emotion-0[aria-disabled="true"] {
  background: #f2f2f5;
  box-shadow: unset;
}

.emotion-0[disabled] + .fp-Icon {
  color: #7b899d;
  fill: #7b899d;
}

.emotion-0:focus {
  outline: unset;
  z-index: 2;
  border-color: #574feb;
  box-shadow: #eeedfd 0px 0px 0px 3px !important;
}

.emotion-3 {
  fill: inherit;
  position: relative;
  height: 1em;
  width: 1em;
}

<div
  class="emotion-1 emotion-2 emotion-9 fp-SelectWrapper fp-Box"
>
  <select
    aria-invalid="false"
    class="emotion-0 emotion-1 emotion-2 fp-Box fp-Select"
  >
    <option
      value="sunny"
    >
      Sunny
    </option>
    <option
      value="windy"
    >
      Windy
    </option>
    <option
      value="overcast"
    >
      Overcast
    </option>
  </select>
  <svg
    class="emotion-3 emotion-1 emotion-2 emotion-6 fp-SelectIcon fp-Box fp-Icon"
    role="img"
    viewBox="0 0 448 512"
  >
    <path
      d="M207.029 381.476L12.686 187.132c-9.373-9.373-9.373-24.569 0-33.941l22.667-22.667c9.357-9.357 24.522-9.375 33.901-.04L224 284.505l154.745-154.021c9.379-9.335 24.544-9.317 33.901.04l22.667 22.667c9.373 9.373 9.373 24.569 0 33.941L240.971 381.476c-9.373 9.372-24.569 9.372-33.942 0z"
      fill="currentColor"
      fill-rule="evenodd"
    />
  </svg>
</div>
`;

exports[`props should render correctly for danger state 1`] = `
.emotion-9 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

.emotion-6.emotion-6 {
  position: absolute;
  width: 0.8em;
  height: 2.75em;
  right: 0.8em;
  z-index: 1;
  color: #212121;
  fill: #212121;
  pointer-events: none;
}

.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-3 {
  fill: inherit;
  position: relative;
  height: 1em;
  width: 1em;
}

.emotion-0 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: linear-gradient(rgb(255,255,255),rgb(249,250,251));
  border: 1px solid #d9d9e1;
  border-radius: 6px;
  color: #212121;
  height: 2.75em;
  padding: 0.4em 2em 0.4em 0.8em;
  line-height: 1.5;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
}

.emotion-0[disabled],
.emotion-0[aria-disabled="true"] {
  background: #f2f2f5;
  box-shadow: unset;
}

.emotion-0[disabled] + .fp-Icon {
  color: #7b899d;
  fill: #7b899d;
}

.emotion-0:focus {
  outline: unset;
  z-index: 2;
  border-color: #574feb;
  box-shadow: #eeedfd 0px 0px 0px 3px !important;
}

.emotion-0 {
  border-color: #da1717;
  box-shadow: #fbe8e8 0px 0px 0px 3px !important;
}

<div
  class="emotion-1 emotion-2 emotion-9 fp-SelectWrapper fp-Box"
>
  <select
    aria-invalid="true"
    class="emotion-0 emotion-1 emotion-2 fp-Box fp-Select"
  >
    <option
      value="sunny"
    >
      Sunny
    </option>
    <option
      value="windy"
    >
      Windy
    </option>
    <option
      value="overcast"
    >
      Overcast
    </option>
  </select>
  <svg
    class="emotion-3 emotion-1 emotion-2 emotion-6 fp-SelectIcon fp-Box fp-Icon"
    role="img"
    viewBox="0 0 448 512"
  >
    <path
      d="M207.029 381.476L12.686 187.132c-9.373-9.373-9.373-24.569 0-33.941l22.667-22.667c9.357-9.357 24.522-9.375 33.901-.04L224 284.505l154.745-154.021c9.379-9.335 24.544-9.317 33.901.04l22.667 22.667c9.373 9.373 9.373 24.569 0 33.941L240.971 381.476c-9.373 9.372-24.569 9.372-33.942 0z"
      fill="currentColor"
      fill-rule="evenodd"
    />
  </svg>
</div>
`;

exports[`props should render correctly for large size 1`] = `
.emotion-6.emotion-6 {
  position: absolute;
  width: 0.8em;
  height: 2.75em;
  right: 0.8em;
  z-index: 1;
  color: #212121;
  fill: #212121;
  pointer-events: none;
}

.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-0 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: linear-gradient(rgb(255,255,255),rgb(249,250,251));
  border: 1px solid #d9d9e1;
  border-radius: 6px;
  color: #212121;
  height: 2.75em;
  padding: 0.4em 2em 0.4em 0.8em;
  line-height: 1.5;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
}

.emotion-0[disabled],
.emotion-0[aria-disabled="true"] {
  background: #f2f2f5;
  box-shadow: unset;
}

.emotion-0[disabled] + .fp-Icon {
  color: #7b899d;
  fill: #7b899d;
}

.emotion-0:focus {
  outline: unset;
  z-index: 2;
  border-color: #574feb;
  box-shadow: #eeedfd 0px 0px 0px 3px !important;
}

.emotion-3 {
  fill: inherit;
  position: relative;
  height: 1em;
  width: 1em;
}

.emotion-9 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  font-size: 1.5rem;
}

<div
  class="emotion-1 emotion-2 emotion-9 fp-SelectWrapper fp-Box"
>
  <select
    aria-invalid="false"
    class="emotion-0 emotion-1 emotion-2 fp-Box fp-Select"
  >
    <option
      value="sunny"
    >
      Sunny
    </option>
    <option
      value="windy"
    >
      Windy
    </option>
    <option
      value="overcast"
    >
      Overcast
    </option>
  </select>
  <svg
    class="emotion-3 emotion-1 emotion-2 emotion-6 fp-SelectIcon fp-Box fp-Icon"
    role="img"
    viewBox="0 0 448 512"
  >
    <path
      d="M207.029 381.476L12.686 187.132c-9.373-9.373-9.373-24.569 0-33.941l22.667-22.667c9.357-9.357 24.522-9.375 33.901-.04L224 284.505l154.745-154.021c9.379-9.335 24.544-9.317 33.901.04l22.667 22.667c9.373 9.373 9.373 24.569 0 33.941L240.971 381.476c-9.373 9.372-24.569 9.372-33.942 0z"
      fill="currentColor"
      fill-rule="evenodd"
    />
  </svg>
</div>
`;

exports[`props should render correctly for medium size 1`] = `
.emotion-6.emotion-6 {
  position: absolute;
  width: 0.8em;
  height: 2.75em;
  right: 0.8em;
  z-index: 1;
  color: #212121;
  fill: #212121;
  pointer-events: none;
}

.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-0 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: linear-gradient(rgb(255,255,255),rgb(249,250,251));
  border: 1px solid #d9d9e1;
  border-radius: 6px;
  color: #212121;
  height: 2.75em;
  padding: 0.4em 2em 0.4em 0.8em;
  line-height: 1.5;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
}

.emotion-0[disabled],
.emotion-0[aria-disabled="true"] {
  background: #f2f2f5;
  box-shadow: unset;
}

.emotion-0[disabled] + .fp-Icon {
  color: #7b899d;
  fill: #7b899d;
}

.emotion-0:focus {
  outline: unset;
  z-index: 2;
  border-color: #574feb;
  box-shadow: #eeedfd 0px 0px 0px 3px !important;
}

.emotion-3 {
  fill: inherit;
  position: relative;
  height: 1em;
  width: 1em;
}

.emotion-9 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  font-size: 1.25rem;
}

<div
  class="emotion-1 emotion-2 emotion-9 fp-SelectWrapper fp-Box"
>
  <select
    aria-invalid="false"
    class="emotion-0 emotion-1 emotion-2 fp-Box fp-Select"
  >
    <option
      value="sunny"
    >
      Sunny
    </option>
    <option
      value="windy"
    >
      Windy
    </option>
    <option
      value="overcast"
    >
      Overcast
    </option>
  </select>
  <svg
    class="emotion-3 emotion-1 emotion-2 emotion-6 fp-SelectIcon fp-Box fp-Icon"
    role="img"
    viewBox="0 0 448 512"
  >
    <path
      d="M207.029 381.476L12.686 187.132c-9.373-9.373-9.373-24.569 0-33.941l22.667-22.667c9.357-9.357 24.522-9.375 33.901-.04L224 284.505l154.745-154.021c9.379-9.335 24.544-9.317 33.901.04l22.667 22.667c9.373 9.373 9.373 24.569 0 33.941L240.971 381.476c-9.373 9.372-24.569 9.372-33.942 0z"
      fill="currentColor"
      fill-rule="evenodd"
    />
  </svg>
</div>
`;

exports[`props should render correctly for small size 1`] = `
.emotion-6.emotion-6 {
  position: absolute;
  width: 0.8em;
  height: 2.75em;
  right: 0.8em;
  z-index: 1;
  color: #212121;
  fill: #212121;
  pointer-events: none;
}

.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-0 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: linear-gradient(rgb(255,255,255),rgb(249,250,251));
  border: 1px solid #d9d9e1;
  border-radius: 6px;
  color: #212121;
  height: 2.75em;
  padding: 0.4em 2em 0.4em 0.8em;
  line-height: 1.5;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
}

.emotion-0[disabled],
.emotion-0[aria-disabled="true"] {
  background: #f2f2f5;
  box-shadow: unset;
}

.emotion-0[disabled] + .fp-Icon {
  color: #7b899d;
  fill: #7b899d;
}

.emotion-0:focus {
  outline: unset;
  z-index: 2;
  border-color: #574feb;
  box-shadow: #eeedfd 0px 0px 0px 3px !important;
}

.emotion-3 {
  fill: inherit;
  position: relative;
  height: 1em;
  width: 1em;
}

.emotion-9 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  font-size: 0.875rem;
}

<div
  class="emotion-1 emotion-2 emotion-9 fp-SelectWrapper fp-Box"
>
  <select
    aria-invalid="false"
    class="emotion-0 emotion-1 emotion-2 fp-Box fp-Select"
  >
    <option
      value="sunny"
    >
      Sunny
    </option>
    <option
      value="windy"
    >
      Windy
    </option>
    <option
      value="overcast"
    >
      Overcast
    </option>
  </select>
  <svg
    class="emotion-3 emotion-1 emotion-2 emotion-6 fp-SelectIcon fp-Box fp-Icon"
    role="img"
    viewBox="0 0 448 512"
  >
    <path
      d="M207.029 381.476L12.686 187.132c-9.373-9.373-9.373-24.569 0-33.941l22.667-22.667c9.357-9.357 24.522-9.375 33.901-.04L224 284.505l154.745-154.021c9.379-9.335 24.544-9.317 33.901.04l22.667 22.667c9.373 9.373 9.373 24.569 0 33.941L240.971 381.476c-9.373 9.372-24.569 9.372-33.942 0z"
      fill="currentColor"
      fill-rule="evenodd"
    />
  </svg>
</div>
`;

exports[`props should render correctly for success state 1`] = `
.emotion-9 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

.emotion-6.emotion-6 {
  position: absolute;
  width: 0.8em;
  height: 2.75em;
  right: 0.8em;
  z-index: 1;
  color: #212121;
  fill: #212121;
  pointer-events: none;
}

.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-3 {
  fill: inherit;
  position: relative;
  height: 1em;
  width: 1em;
}

.emotion-0 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: linear-gradient(rgb(255,255,255),rgb(249,250,251));
  border: 1px solid #d9d9e1;
  border-radius: 6px;
  color: #212121;
  height: 2.75em;
  padding: 0.4em 2em 0.4em 0.8em;
  line-height: 1.5;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
}

.emotion-0[disabled],
.emotion-0[aria-disabled="true"] {
  background: #f2f2f5;
  box-shadow: unset;
}

.emotion-0[disabled] + .fp-Icon {
  color: #7b899d;
  fill: #7b899d;
}

.emotion-0:focus {
  outline: unset;
  z-index: 2;
  border-color: #574feb;
  box-shadow: #eeedfd 0px 0px 0px 3px !important;
}

.emotion-0 {
  border-color: #0a7d33;
  box-shadow: #e7f2eb 0px 0px 0px 3px !important;
}

<div
  class="emotion-1 emotion-2 emotion-9 fp-SelectWrapper fp-Box"
>
  <select
    aria-invalid="false"
    class="emotion-0 emotion-1 emotion-2 fp-Box fp-Select"
  >
    <option
      value="sunny"
    >
      Sunny
    </option>
    <option
      value="windy"
    >
      Windy
    </option>
    <option
      value="overcast"
    >
      Overcast
    </option>
  </select>
  <svg
    class="emotion-3 emotion-1 emotion-2 emotion-6 fp-SelectIcon fp-Box fp-Icon"
    role="img"
    viewBox="0 0 448 512"
  >
    <path
      d="M207.029 381.476L12.686 187.132c-9.373-9.373-9.373-24.569 0-33.941l22.667-22.667c9.357-9.357 24.522-9.375 33.901-.04L224 284.505l154.745-154.021c9.379-9.335 24.544-9.317 33.901.04l22.667 22.667c9.373 9.373 9.373 24.569 0 33.941L240.971 381.476c-9.373 9.372-24.569 9.372-33.942 0z"
      fill="currentColor"
      fill-rule="evenodd"
    />
  </svg>
</div>
`;

exports[`props should render correctly for warning state 1`] = `
.emotion-9 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

.emotion-6.emotion-6 {
  position: absolute;
  width: 0.8em;
  height: 2.75em;
  right: 0.8em;
  z-index: 1;
  color: #212121;
  fill: #212121;
  pointer-events: none;
}

.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-3 {
  fill: inherit;
  position: relative;
  height: 1em;
  width: 1em;
}

.emotion-0 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: linear-gradient(rgb(255,255,255),rgb(249,250,251));
  border: 1px solid #d9d9e1;
  border-radius: 6px;
  color: #212121;
  height: 2.75em;
  padding: 0.4em 2em 0.4em 0.8em;
  line-height: 1.5;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
}

.emotion-0[disabled],
.emotion-0[aria-disabled="true"] {
  background: #f2f2f5;
  box-shadow: unset;
}

.emotion-0[disabled] + .fp-Icon {
  color: #7b899d;
  fill: #7b899d;
}

.emotion-0:focus {
  outline: unset;
  z-index: 2;
  border-color: #574feb;
  box-shadow: #eeedfd 0px 0px 0px 3px !important;
}

.emotion-0 {
  border-color: #ed9c22;
  box-shadow: #fdf5e9 0px 0px 0px 3px !important;
}

<div
  class="emotion-1 emotion-2 emotion-9 fp-SelectWrapper fp-Box"
>
  <select
    aria-invalid="false"
    class="emotion-0 emotion-1 emotion-2 fp-Box fp-Select"
  >
    <option
      value="sunny"
    >
      Sunny
    </option>
    <option
      value="windy"
    >
      Windy
    </option>
    <option
      value="overcast"
    >
      Overcast
    </option>
  </select>
  <svg
    class="emotion-3 emotion-1 emotion-2 emotion-6 fp-SelectIcon fp-Box fp-Icon"
    role="img"
    viewBox="0 0 448 512"
  >
    <path
      d="M207.029 381.476L12.686 187.132c-9.373-9.373-9.373-24.569 0-33.941l22.667-22.667c9.357-9.357 24.522-9.375 33.901-.04L224 284.505l154.745-154.021c9.379-9.335 24.544-9.317 33.901.04l22.667 22.667c9.373 9.373 9.373 24.569 0 33.941L240.971 381.476c-9.373 9.372-24.569 9.372-33.942 0z"
      fill="currentColor"
      fill-rule="evenodd"
    />
  </svg>
</div>
`;

exports[`props should render correctly with CSS props 1`] = `
.emotion-9 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

.emotion-6.emotion-6 {
  position: absolute;
  width: 0.8em;
  height: 2.75em;
  right: 0.8em;
  z-index: 1;
  color: #212121;
  fill: #212121;
  pointer-events: none;
}

.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-0 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: linear-gradient(rgb(255,255,255),rgb(249,250,251));
  border: 1px solid #d9d9e1;
  border-radius: 6px;
  color: #212121;
  height: 2.75em;
  padding: 0.4em 2em 0.4em 0.8em;
  line-height: 1.5;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
}

.emotion-0[disabled],
.emotion-0[aria-disabled="true"] {
  background: #f2f2f5;
  box-shadow: unset;
}

.emotion-0[disabled] + .fp-Icon {
  color: #7b899d;
  fill: #7b899d;
}

.emotion-0:focus {
  outline: unset;
  z-index: 2;
  border-color: #574feb;
  box-shadow: #eeedfd 0px 0px 0px 3px !important;
}

.emotion-3 {
  fill: inherit;
  position: relative;
  height: 1em;
  width: 1em;
}

.emotion-8 {
  background-color: #574feb !important;
}

<div
  class="emotion-1 emotion-8 emotion-9 fp-SelectWrapper fp-Box"
>
  <select
    aria-invalid="false"
    class="emotion-0 emotion-1 emotion-2 fp-Box fp-Select"
  >
    <option
      value="sunny"
    >
      Sunny
    </option>
    <option
      value="windy"
    >
      Windy
    </option>
    <option
      value="overcast"
    >
      Overcast
    </option>
  </select>
  <svg
    class="emotion-3 emotion-1 emotion-2 emotion-6 fp-SelectIcon fp-Box fp-Icon"
    role="img"
    viewBox="0 0 448 512"
  >
    <path
      d="M207.029 381.476L12.686 187.132c-9.373-9.373-9.373-24.569 0-33.941l22.667-22.667c9.357-9.357 24.522-9.375 33.901-.04L224 284.505l154.745-154.021c9.379-9.335 24.544-9.317 33.901.04l22.667 22.667c9.373 9.373 9.373 24.569 0 33.941L240.971 381.476c-9.373 9.372-24.569 9.372-33.942 0z"
      fill="currentColor"
      fill-rule="evenodd"
    />
  </svg>
</div>
`;

exports[`props should render correctly with a default value 1`] = `
.emotion-9 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

.emotion-6.emotion-6 {
  position: absolute;
  width: 0.8em;
  height: 2.75em;
  right: 0.8em;
  z-index: 1;
  color: #212121;
  fill: #212121;
  pointer-events: none;
}

.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-0 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: linear-gradient(rgb(255,255,255),rgb(249,250,251));
  border: 1px solid #d9d9e1;
  border-radius: 6px;
  color: #212121;
  height: 2.75em;
  padding: 0.4em 2em 0.4em 0.8em;
  line-height: 1.5;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
}

.emotion-0[disabled],
.emotion-0[aria-disabled="true"] {
  background: #f2f2f5;
  box-shadow: unset;
}

.emotion-0[disabled] + .fp-Icon {
  color: #7b899d;
  fill: #7b899d;
}

.emotion-0:focus {
  outline: unset;
  z-index: 2;
  border-color: #574feb;
  box-shadow: #eeedfd 0px 0px 0px 3px !important;
}

.emotion-3 {
  fill: inherit;
  position: relative;
  height: 1em;
  width: 1em;
}

<div
  class="emotion-1 emotion-2 emotion-9 fp-SelectWrapper fp-Box"
>
  <select
    aria-invalid="false"
    class="emotion-0 emotion-1 emotion-2 fp-Box fp-Select"
  >
    <option
      selected=""
      value="sunny"
    >
      Sunny
    </option>
    <option
      value="windy"
    >
      Windy
    </option>
    <option
      value="overcast"
    >
      Overcast
    </option>
  </select>
  <svg
    class="emotion-3 emotion-1 emotion-2 emotion-6 fp-SelectIcon fp-Box fp-Icon"
    role="img"
    viewBox="0 0 448 512"
  >
    <path
      d="M207.029 381.476L12.686 187.132c-9.373-9.373-9.373-24.569 0-33.941l22.667-22.667c9.357-9.357 24.522-9.375 33.901-.04L224 284.505l154.745-154.021c9.379-9.335 24.544-9.317 33.901.04l22.667 22.667c9.373 9.373 9.373 24.569 0 33.941L240.971 381.476c-9.373 9.372-24.569 9.372-33.942 0z"
      fill="currentColor"
      fill-rule="evenodd"
    />
  </svg>
</div>
`;

exports[`props should render correctly with disabled 1`] = `
.emotion-9 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

.emotion-6.emotion-6 {
  position: absolute;
  width: 0.8em;
  height: 2.75em;
  right: 0.8em;
  z-index: 1;
  color: #212121;
  fill: #212121;
  pointer-events: none;
}

.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-0 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: linear-gradient(rgb(255,255,255),rgb(249,250,251));
  border: 1px solid #d9d9e1;
  border-radius: 6px;
  color: #212121;
  height: 2.75em;
  padding: 0.4em 2em 0.4em 0.8em;
  line-height: 1.5;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
}

.emotion-0[disabled],
.emotion-0[aria-disabled="true"] {
  background: #f2f2f5;
  box-shadow: unset;
}

.emotion-0[disabled] + .fp-Icon {
  color: #7b899d;
  fill: #7b899d;
}

.emotion-0:focus {
  outline: unset;
  z-index: 2;
  border-color: #574feb;
  box-shadow: #eeedfd 0px 0px 0px 3px !important;
}

.emotion-3 {
  fill: inherit;
  position: relative;
  height: 1em;
  width: 1em;
}

<div
  class="emotion-1 emotion-2 emotion-9 fp-SelectWrapper fp-Box"
>
  <select
    aria-invalid="false"
    class="emotion-0 emotion-1 emotion-2 fp-Box fp-Select"
    disabled=""
  >
    <option
      disabled=""
      value="sunny"
    >
      Sunny
    </option>
    <option
      disabled=""
      value="windy"
    >
      Windy
    </option>
    <option
      disabled=""
      value="overcast"
    >
      Overcast
    </option>
  </select>
  <svg
    class="emotion-3 emotion-1 emotion-2 emotion-6 fp-SelectIcon fp-Box fp-Icon"
    role="img"
    viewBox="0 0 448 512"
  >
    <path
      d="M207.029 381.476L12.686 187.132c-9.373-9.373-9.373-24.569 0-33.941l22.667-22.667c9.357-9.357 24.522-9.375 33.901-.04L224 284.505l154.745-154.021c9.379-9.335 24.544-9.317 33.901.04l22.667 22.667c9.373 9.373 9.373 24.569 0 33.941L240.971 381.476c-9.373 9.372-24.569 9.372-33.942 0z"
      fill="currentColor"
      fill-rule="evenodd"
    />
  </svg>
</div>
`;

exports[`props should render correctly with isLoading 1`] = `
@keyframes animation-0 {
  from {
    -webkit-transform: rotate(0deg);
    -ms-transform: rotate(0deg);
    transform: rotate(0deg);
  }

  to {
    -webkit-transform: rotate(360deg);
    -ms-transform: rotate(360deg);
    transform: rotate(360deg);
  }
}

.emotion-11 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

.emotion-8.emotion-8 {
  font-size: inherit;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: absolute;
  height: 2.75em;
  margin: 0 0.75em;
  top: 0;
  right: 0;
  z-index: 2;
}

.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-0 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: linear-gradient(rgb(255,255,255),rgb(249,250,251));
  border: 1px solid #d9d9e1;
  border-radius: 6px;
  color: #212121;
  height: 2.75em;
  padding: 0.4em 2em 0.4em 0.8em;
  line-height: 1.5;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
}

.emotion-0[disabled],
.emotion-0[aria-disabled="true"] {
  background: #f2f2f5;
  box-shadow: unset;
}

.emotion-0[disabled] + .fp-Icon {
  color: #7b899d;
  fill: #7b899d;
}

.emotion-0:focus {
  outline: unset;
  z-index: 2;
  border-color: #574feb;
  box-shadow: #eeedfd 0px 0px 0px 3px !important;
}

.emotion-7 {
  color: #212121 !important;
}

.emotion-5 {
  line-height: 1rem;
  font-size: 20px;
}

.emotion-4 {
  width: 1em;
  height: 1em;
  -webkit-transform: rotate(-90deg);
  -ms-transform: rotate(-90deg);
  transform: rotate(-90deg);
  -webkit-animation: animation-0 0.6s infinite linear;
  animation: animation-0 0.6s infinite linear;
}

.emotion-3 {
  stroke-dasharray: 275;
  stroke-dashoffset: 200px;
  stroke: #212121;
  -webkit-transition: stroke-dashoffset 300ms cubic-bezier(0.4,0,0.2,1) 0ms;
  transition: stroke-dashoffset 300ms cubic-bezier(0.4,0,0.2,1) 0ms;
}

<div
  class="emotion-1 emotion-2 emotion-11 fp-SelectWrapper fp-Box"
>
  <select
    aria-invalid="false"
    class="emotion-0 emotion-1 emotion-2 fp-Box fp-Select"
  >
    <option
      value="sunny"
    >
      Sunny
    </option>
    <option
      value="windy"
    >
      Windy
    </option>
    <option
      value="overcast"
    >
      Overcast
    </option>
  </select>
  <div
    class="emotion-5 emotion-1 emotion-7 emotion-8 fp-SelectSpinner fp-Box fp-Spinner"
  >
    <svg
      class="emotion-4 fp-Spinnervector"
      viewBox="22 22 44 44"
    >
      <circle
        class="emotion-3 fp-SpinnerloaderCircle"
        cx="44"
        cy="44"
        fill="none"
        r="20"
        stroke-width="4"
      />
    </svg>
  </div>
</div>
`;

exports[`props should render correctly with isRequired 1`] = `
.emotion-9 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

.emotion-6.emotion-6 {
  position: absolute;
  width: 0.8em;
  height: 2.75em;
  right: 0.8em;
  z-index: 1;
  color: #212121;
  fill: #212121;
  pointer-events: none;
}

.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-0 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: linear-gradient(rgb(255,255,255),rgb(249,250,251));
  border: 1px solid #d9d9e1;
  border-radius: 6px;
  color: #212121;
  height: 2.75em;
  padding: 0.4em 2em 0.4em 0.8em;
  line-height: 1.5;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
}

.emotion-0[disabled],
.emotion-0[aria-disabled="true"] {
  background: #f2f2f5;
  box-shadow: unset;
}

.emotion-0[disabled] + .fp-Icon {
  color: #7b899d;
  fill: #7b899d;
}

.emotion-0:focus {
  outline: unset;
  z-index: 2;
  border-color: #574feb;
  box-shadow: #eeedfd 0px 0px 0px 3px !important;
}

.emotion-3 {
  fill: inherit;
  position: relative;
  height: 1em;
  width: 1em;
}

<div
  class="emotion-1 emotion-2 emotion-9 fp-SelectWrapper fp-Box"
>
  <select
    aria-invalid="false"
    aria-required="true"
    class="emotion-0 emotion-1 emotion-2 fp-Box fp-Select"
  >
    <option
      value="sunny"
    >
      Sunny
    </option>
    <option
      value="windy"
    >
      Windy
    </option>
    <option
      value="overcast"
    >
      Overcast
    </option>
  </select>
  <svg
    class="emotion-3 emotion-1 emotion-2 emotion-6 fp-SelectIcon fp-Box fp-Icon"
    role="img"
    viewBox="0 0 448 512"
  >
    <path
      d="M207.029 381.476L12.686 187.132c-9.373-9.373-9.373-24.569 0-33.941l22.667-22.667c9.357-9.357 24.522-9.375 33.901-.04L224 284.505l154.745-154.021c9.379-9.335 24.544-9.317 33.901.04l22.667 22.667c9.373 9.373 9.373 24.569 0 33.941L240.971 381.476c-9.373 9.372-24.569 9.372-33.942 0z"
      fill="currentColor"
      fill-rule="evenodd"
    />
  </svg>
</div>
`;

exports[`props should render correctly with name 1`] = `
.emotion-9 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

.emotion-6.emotion-6 {
  position: absolute;
  width: 0.8em;
  height: 2.75em;
  right: 0.8em;
  z-index: 1;
  color: #212121;
  fill: #212121;
  pointer-events: none;
}

.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-0 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: linear-gradient(rgb(255,255,255),rgb(249,250,251));
  border: 1px solid #d9d9e1;
  border-radius: 6px;
  color: #212121;
  height: 2.75em;
  padding: 0.4em 2em 0.4em 0.8em;
  line-height: 1.5;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
}

.emotion-0[disabled],
.emotion-0[aria-disabled="true"] {
  background: #f2f2f5;
  box-shadow: unset;
}

.emotion-0[disabled] + .fp-Icon {
  color: #7b899d;
  fill: #7b899d;
}

.emotion-0:focus {
  outline: unset;
  z-index: 2;
  border-color: #574feb;
  box-shadow: #eeedfd 0px 0px 0px 3px !important;
}

.emotion-3 {
  fill: inherit;
  position: relative;
  height: 1em;
  width: 1em;
}

<div
  class="emotion-1 emotion-2 emotion-9 fp-SelectWrapper fp-Box"
>
  <select
    aria-invalid="false"
    class="emotion-0 emotion-1 emotion-2 fp-Box fp-Select"
    name="test"
  >
    <option
      value="sunny"
    >
      Sunny
    </option>
    <option
      value="windy"
    >
      Windy
    </option>
    <option
      value="overcast"
    >
      Overcast
    </option>
  </select>
  <svg
    class="emotion-3 emotion-1 emotion-2 emotion-6 fp-SelectIcon fp-Box fp-Icon"
    role="img"
    viewBox="0 0 448 512"
  >
    <path
      d="M207.029 381.476L12.686 187.132c-9.373-9.373-9.373-24.569 0-33.941l22.667-22.667c9.357-9.357 24.522-9.375 33.901-.04L224 284.505l154.745-154.021c9.379-9.335 24.544-9.317 33.901.04l22.667 22.667c9.373 9.373 9.373 24.569 0 33.941L240.971 381.476c-9.373 9.372-24.569 9.372-33.942 0z"
      fill="currentColor"
      fill-rule="evenodd"
    />
  </svg>
</div>
`;

exports[`props should render placeholder correctly 1`] = `
.emotion-9 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

.emotion-6.emotion-6 {
  position: absolute;
  width: 0.8em;
  height: 2.75em;
  right: 0.8em;
  z-index: 1;
  color: #212121;
  fill: #212121;
  pointer-events: none;
}

.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-3 {
  fill: inherit;
  position: relative;
  height: 1em;
  width: 1em;
}

.emotion-0 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: linear-gradient(rgb(255,255,255),rgb(249,250,251));
  border: 1px solid #d9d9e1;
  border-radius: 6px;
  color: #7a7a7a;
  height: 2.75em;
  padding: 0.4em 2em 0.4em 0.8em;
  line-height: 1.5;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
}

.emotion-0[disabled],
.emotion-0[aria-disabled="true"] {
  background: #f2f2f5;
  box-shadow: unset;
}

.emotion-0[disabled] + .fp-Icon {
  color: #7b899d;
  fill: #7b899d;
}

.emotion-0:focus {
  outline: unset;
  z-index: 2;
  border-color: #574feb;
  box-shadow: #eeedfd 0px 0px 0px 3px !important;
}

<div
  class="emotion-1 emotion-2 emotion-9 fp-SelectWrapper fp-Box"
>
  <select
    aria-invalid="false"
    class="emotion-0 emotion-1 emotion-2 fp-Box fp-Select"
  >
    <option
      value=""
    >
      Please select...
    </option>
    <option
      value="sunny"
    >
      Sunny
    </option>
    <option
      value="windy"
    >
      Windy
    </option>
    <option
      value="overcast"
    >
      Overcast
    </option>
  </select>
  <svg
    class="emotion-3 emotion-1 emotion-2 emotion-6 fp-SelectIcon fp-Box fp-Icon"
    role="img"
    viewBox="0 0 448 512"
  >
    <path
      d="M207.029 381.476L12.686 187.132c-9.373-9.373-9.373-24.569 0-33.941l22.667-22.667c9.357-9.357 24.522-9.375 33.901-.04L224 284.505l154.745-154.021c9.379-9.335 24.544-9.317 33.901.04l22.667 22.667c9.373 9.373 9.373 24.569 0 33.941L240.971 381.476c-9.373 9.372-24.569 9.372-33.942 0z"
      fill="currentColor"
      fill-rule="evenodd"
    />
  </svg>
</div>
`;

exports[`theming Select.root should render correctly 1`] = `
.emotion-9 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

.emotion-6.emotion-6 {
  position: absolute;
  width: 0.8em;
  height: 2.75em;
  right: 0.8em;
  z-index: 1;
  color: #212121;
  fill: #212121;
  pointer-events: none;
}

.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-3 {
  fill: inherit;
  position: relative;
  height: 1em;
  width: 1em;
}

.emotion-0 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: linear-gradient(rgb(255,255,255),rgb(249,250,251));
  border: 1px solid #d9d9e1;
  border-radius: 6px;
  color: #7a7a7a;
  height: 2.75em;
  padding: 0.4em 2em 0.4em 0.8em;
  line-height: 1.5;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
}

.emotion-0[disabled],
.emotion-0[aria-disabled="true"] {
  background: #f2f2f5;
  box-shadow: unset;
}

.emotion-0[disabled] + .fp-Icon {
  color: #7b899d;
  fill: #7b899d;
}

.emotion-0:focus {
  outline: unset;
  z-index: 2;
  border-color: #574feb;
  box-shadow: #eeedfd 0px 0px 0px 3px !important;
}

.emotion-0 {
  background-color: red;
}

<div
  class="emotion-1 emotion-2 emotion-9 fp-SelectWrapper fp-Box"
>
  <select
    aria-invalid="false"
    class="emotion-0 emotion-1 emotion-2 fp-Box fp-Select"
  >
    <option
      value=""
    >
      Please select...
    </option>
    <option
      value="sunny"
    >
      Sunny
    </option>
    <option
      value="windy"
    >
      Windy
    </option>
    <option
      value="overcast"
    >
      Overcast
    </option>
  </select>
  <svg
    class="emotion-3 emotion-1 emotion-2 emotion-6 fp-SelectIcon fp-Box fp-Icon"
    role="img"
    viewBox="0 0 448 512"
  >
    <path
      d="M207.029 381.476L12.686 187.132c-9.373-9.373-9.373-24.569 0-33.941l22.667-22.667c9.357-9.357 24.522-9.375 33.901-.04L224 284.505l154.745-154.021c9.379-9.335 24.544-9.317 33.901.04l22.667 22.667c9.373 9.373 9.373 24.569 0 33.941L240.971 381.476c-9.373 9.372-24.569 9.372-33.942 0z"
      fill="currentColor"
      fill-rule="evenodd"
    />
  </svg>
</div>
`;
